use non-stolen AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,2 @@
-Tobias Graven <tobiaspg@member.fsf.org>
+Amanda Graven <amanda@amandag.net>
 * Main upstream and current maintainer.
-
-Ikey Doherty <ikey.doherty@gmail.com>
-* Autotools and git cleanup
